--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.5.0"
-cameraExtensions = "1.4.0-beta02"
+cameraExtensions = "1.4.0-rc04"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
